--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ body {
   font-family: "Montserrat";
 }
 
+.carousel-item {
+  height: 500px;
+}
+
 #title {
   background-color: #ff4c68;
   color: #fff;
@@ -92,7 +96,6 @@ p {
 }
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
@@ -102,6 +105,10 @@ p {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 #press {
