--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
-  background-color: #ff4c68;
+  padding: 3% 15% 7%;
 }
 
 h1 {
@@ -66,6 +65,8 @@ p {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
 }
 
 .rotate45 {
@@ -87,7 +88,9 @@ p {
 
 #features {
   padding: 7% 15%;
-
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .feature-box {
@@ -118,4 +121,13 @@ p {
 
 .press-logo {
   width: 15%;
+}
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
 }
