--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,40 @@
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
 .carousel-item {
   height: 500px;
 }
 
-#title {
+.container-fluid {
+  padding: 7% 15%;
+}
+
+.colored-section {
   background-color: #ff4c68;
   color: #fff;
 }
 
-.container-fluid {
-  padding: 3% 15% 7%;
+.white-section {
+  background-color: #fff;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+}
+
+.big-heading {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
   font-size: 3rem;
   line-height: 1.5;
 }
 
-h2 {
-  font-family: "Montserrat";
-  font-weight: 900;
+.section-heading {
   font-size: 3rem;
   line-height: 1.5;
-}
-
-h3  {
-  font-family: "Montserrat";
-  font-weight: 900;
 }
 
 p {
@@ -62,6 +65,11 @@ p {
   margin: 5% 3% 5% 0;
 }
 
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 .title-image {
   width: 60%;
   transform: rotate(25deg);
@@ -88,20 +96,20 @@ p {
 
 #features {
   padding: 7% 15%;
-  background-color: #fff;
   position: relative;
   z-index: 1;
 }
 
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimoial-image {
@@ -110,13 +118,17 @@ p {
   margin: 20px;
 }
 
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .carousel-item {
   padding: 7% 15%;
 }
 
 #press {
   background-color: #ef8172;
-  text-align: center;
 }
 
 .press-logo {
@@ -125,9 +137,44 @@ p {
 
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
   padding: 3% 2%;
+}
+
+@media (max-width: 1028px) {
+
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+#cta {
+  padding: 7% 15%;
+}
+
+.cta-heading {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+#footer {
+  padding: 7% 15%;
+}
+
+.social-icon {
+  margin: 20px 10px;
 }
